--- a/teaching/philosophy.html
+++ b/teaching/philosophy.html
@@ -44,7 +44,7 @@
                 <a class="float-right text-right" href="../pdf/My Teaching Philosophy Statement - Revised.pdf" target="_blank">
                     Open in new window <i class="fa">&#xf08e;</i>
                 </a>
-                <embed src="../pdf/My Teaching Philosophy Statement - Revised.pdf" width="100%" height="600">
+                <iframe src="../pdf/My Teaching Philosophy Statement - Revised.pdf" width="100%" height="600"></iframe>
             </div>
             
         </main>
