--- a/teaching/philosophy.html
+++ b/teaching/philosophy.html
@@ -36,7 +36,7 @@
 
         <main class="col-md right">
             <h1>
-                My Teaching Philosophy Statement
+                My Teaching Philosophy Statement 1
             </h1>
             <hr>
 
