--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="icon/profile_pic.jpg" width="95%">
                 </div> 
                 <h2>
-                    HERMAN CLOUD HENG 
+                    H. CLOUD HENG 
                 </h2>
                 <div class="aside-content">
                     <div>  
