--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
                     <div class="row">
                         <div class="col-4">
                             <div class="small-screen-content">
-                                <img style="text-align: left;" src="icon/profile_pic.jpg" width="100%">
+                                <img src="icon/profile_pic.jpg" width="100%">
                             </div>
                         </div>
                         <div class="col-8">
                             <div class="small-screen-content">
-                            <h4 style="margin: 0px 10px;">
-                                H. CLOUD HENG 
-                            </h4>
-                            <div style="margin: 0px 10px;">  
-                                <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
-                            </div >
-                            <div>
-                                <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a>
-                                <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
-                                <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
-                                <a href="#" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
-                                <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
-                                <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>
+                                <h4 style="margin: 0px 3px;">
+                                    H. CLOUD HENG 
+                                </h4>
+                                <div style="margin: 0px 3px;">  
+                                    <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
+                                </div >
+                                <div>
+                                    <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a>
+                                    <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
+                                    <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
+                                    <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
+                                    <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>
+                                </div>
                             </div>
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -83,14 +83,18 @@
                     <div>
                     <b>Serve my community as:</b> 
                         <ul class="nobull">
-                            <li><span style="font-size: 20px;"> &#128119; </span> Engineer</li>
-                            <li><span style="font-size: 20px;"> &#128640; </span> Reseacher </li>
-                            <li><span style="font-size: 20px;"> &#128187; </span> Programmer</li> 
-                            <li><span style="font-size: 20px;"> &#128218; </span> Teacher </li>
-                            <li><span style="font-size: 20px;"> &#128161; </span> Mentor</li>
-                            <li><span style="font-size: 20px;"> &#127925; </span> Musician </li>
+                            <li><span class="icon"> &#128119; </span> Engineer</li>
+                            <li><span class="icon"> &#128640; </span> Reseacher </li>
+                            <li><span class="icon"> &#128187; </span> Programmer</li> 
+                            <li><span class="icon"> &#128218; </span> Teacher </li>
+                            <li><span class="icon"> &#128161; </span> Mentor</li>
+                            <li><span class="icon"> &#127925; </span> Musician </li>
                         </ul>
                     </div>    
+
+                    <style>
+                        .icon {display: inline-block; width: 30px; font-size: 20px; text-align: center;}
+                    </style>
 
                     <!-- <img src="icon/engineer.png" width=10%>
                     <img src="icon/reseacher.png" width=10%>
@@ -102,25 +106,30 @@
                     <div>
                         <b>Languages:</b> 
                         <ul class="nobull">
-                            <li><i class="flag-icon flag-icon-gb"></i> English</li>  
-                            <li><i class="flag-icon flag-icon-cn"></i> Chinese</li>
-                            <li><i class="flag-icon flag-icon-my"></i> Malay</li>
+                            <li><i class="flag flag-icon flag-icon-gb"></i> English</li>  
+                            <li><i class="flag flag-icon flag-icon-cn"></i> Chinese</li>
+                            <li><i class="flag flag-icon flag-icon-my"></i> Malay</li>
                         </ul>    
                     </div>
                 
                     <div>
                     <b>Country of Residence:</b> 
                         <ul class="nobull">
-                            <li><i class="flag-icon flag-icon-ca"></i> Malaysia</li>
+                            <li><i class="flag flag-icon flag-icon-ca"></i> Malaysia</li>
                         </ul>    
                     </div>
                 
                     <div>
                         <b>Country of Origin:</b> 
                         <ul class="nobull">
-                            <li><i class="flag-icon flag-icon-my"></i> Malaysia</li>
+                            <li><i class="flag flag-icon flag-icon-my"></i> Malaysia</li>
                         </ul>    
                     </div>
+
+                    <style>
+                        .flag {display: inline-block; width: 30px;}
+                    </style>
+
                 </div>
             </div>
 
