--- a/professional/GPS989.html
+++ b/professional/GPS989.html
@@ -82,7 +82,7 @@
             It extremely inspiring to learn from this course about "design for disability, not for norms" which is an idea presented in a TEDx Talk by Elise Roy, and this perhaps is my biggest takeaway from this professional course since it is my goal to create an inclusive environment in classroom settings, events, and my community.  
         </p>
         <div class="paragraph image">
-            <iframe width="90%" height="450" src="https://www.youtube.com/embed/g2m97gPI70I?autoplay=0&rel=0">
+            <iframe width="100%" height="450" src="https://www.youtube.com/embed/g2m97gPI70I?autoplay=0&rel=0">
             </iframe>
         </div>
         <p>
@@ -117,7 +117,10 @@
             <div class="col-md">
             <div class="collapse" id="collapseExample_a">
                 <div class="card card-body">  
-                        <embed src="../pdf/Microteaching 1 Feedback.pdf" width="100%" height="500">
+                    <a class="float-right text-right" href="../pdf/Microteaching 1 Feedback.pdf" target="_blank">
+                        Open in new window <i class="fa">&#xf08e;</i>
+                    </a>
+                    <embed src="../pdf/Microteaching 1 Feedback.pdf" width="100%" height="500">
                 </div>
             </div>
         </div>      
@@ -136,7 +139,10 @@
             <div class="col-md">
             <div class="collapse" id="collapseExample_b">
                 <div class="card card-body">  
-                        <embed src="../pdf/Microteaching 2 Feedback.pdf" width="100%" height="500">
+                    <a class="float-right text-right" href="../pdf/Microteaching 2 Feedback.pdf" target="_blank">
+                        Open in new window <i class="fa">&#xf08e;</i>
+                    </a>
+                    <embed src="../pdf/Microteaching 2 Feedback.pdf" width="100%" height="500">
                 </div>
             </div>
         </div>      
