--- a/travel/Italy.html
+++ b/travel/Italy.html
@@ -44,54 +44,56 @@
             </h6> 
 
             <p>
-                My first visit to Italy was during the time before I flew from Malaysia to Canada for my <a href="../education/MSc.html">M.Sc.</a> studies. Since that was during the winter, it is common that my destination city Saskatoon has extreme weather with -30&#8451;. Could you imagine the challege of flying from Malaysia with 30&#8451; to a city with -30&#8451;? Thankfully, Carlo Ranzato invited me to Italy to take a break before I flew to Canada. Italy was a good mid-point stop for me to adjust the huge temperature and time zone differences between Malaysia and Canada.    
+                My first visit to Italy was during the time before I flew from Malaysia to Canada for my <a href="../education/MSc.html">M.Sc. studies</a>. Since that was during the winter, it is common that my destination city Saskatoon has extreme weather with -30&#8451;. Could you imagine the challege of flying from Malaysia with 30&#8451; to a city with -30&#8451;? Thankfully, Carlo Ranzato invited me to Italy to take a break before I flew to Canada. Italy was a good mid-point stop for me to adjust the huge temperature and time zone differences between Malaysia and Canada.    
             </p>
 
             <p>
-                Italy was the first country that I have seen snow in my life. Carlo understood that as a person coming from Malaysia, seeing snow would be something very excited for me. On my first three days arriving in Italy, I was invited to a youth camp on a mountain in Piove di Sacco. On the top of this mountain, there is beautiful winter scenary which I could appreciate as someone who has never experienced winter.  
+                Italy was the first country that I have seen snow in my life. Carlo understood that as a person coming from Malaysia, seeing snow would be something very excited for me. On my first three days arriving in Italy, I was invited to a youth camp on a mountain in Cesuna. On the top of this mountain, there is beautiful winter scenary which I could appreciate as someone who has never experienced winter.  
             </p>
 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <img src="../travel/image/italy8a.jpg" width=100% height="85%">
-                        <label>A breathtaking view on a mountain in Piove di Sacco.
-                        This is the campsite for the youth camp that Carlo and his youth group invited me to visit 
+                    <div class="col-md-6">
+                        <img src="../travel/image/italy8b.jpg" width=100%>
+                        <label>A breathtaking view on a mountain in Cesuna, 
+                            the campsite for the youth camp that Carlo's group invited me to join
                         </label>
                     </div>
                     <div class="col-md-3">
-                        <img src="../travel/image/italy10a.jpg" width=100% height="85%">
-                        <label>My first time experience with snow in Italy</label>
+                        <img src="../travel/image/italy10.jpg" width=100%>
+                        <label>My first time ever experience with lovely snow in Italy</label>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../travel/image/italy9.jpg" width=100%>
+                        <labe>Spending time together with the youths in the camp</label>
                     </div>
                 </div>
             </div>
-
             <p>
                 Of course, something which is more valuable than the stunning winter views are the friendships that I have made during this youth camp. I spent time with many Grade 8 students in this camp to learn their cultures and lives. Don Giuliano Piovan, a priest in Piove di Sacco, is the leader in this group. His team also invited some refugees from Libya to this camp to share their tough lives. This sharing has triggered the empathy among many youths attending this sharing, which helped them to appreciate their lives better. 
             </p>
 
             <p>
-                After this camp, I was invited to Carlo's family to stay for a week where I learned a lot about Italian culture. I visited Venice with his family members, and Don Giuliano has also invited me to visit his church and some local attractions nearby. After visiting Carlo, I also took opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome.
+                After this camp, I was invited to Carlo's family to stay for a week where I learned a lot about Italian culture. I visited Venice with his family members, and Don Giuliano has also invited me to visit his church and some local attractions nearby. What touched my heart the most was, Don Guiliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new party for refugees. I was also invited to join the refugees and his team in this lovely new year celerbation. Having new year party with the Italian community and refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
+            <p>
+                After visiting Carlo and Don Guiliano, I also took opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin my new chapter of life. 
             </p>
 
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
+                        <img src="../travel/image/italy11.jpg" width=100%>
+                        <label>Visted Venice with Caterina and Vittoria (Carlo's sisters)</label>
+                    </div>
+                    <div class="col-md-4">
                         <img src="../travel/image/italy6.jpg" width=100%>
                         <label>Gift exchange with Don Giuliano Piovan, a priest in Piove di Sacco</label>
                     </div>
                     <div class="col-md-4">
-                        <img src="../travel/image/italy9.jpg" width=100%>
-                        <label>Spending time with some youths during the youth camp I visited</label>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="../travel/image/italy11.jpg" width=100%>
-                        <label>Visted Venice with Caterina and Vittoria (Carlo's sisters)</label>
+                        <img src="../travel/image/italy12.jpg" width=100%>
+                        <label>Having a new year party with Italian community and some refugees</label>
                     </div>
                 </div>
-            </div>
-
-            <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <img src="../travel/image/italy7.jpg" width=100%>
