--- a/education/MSc.html
+++ b/education/MSc.html
@@ -65,7 +65,7 @@
             </div>
 
             <p>
-                University of Saskatchewan (U of S) is a part of the U15 group in Canada who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented by different graduate courses in fluid mechanics and thermal sciences.  
+                University of Saskatchewan (U of S) is a part of the <a href="http://www.u15.ca/">U15 group in Canada</a> who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented by different graduate courses in fluid mechanics and thermal sciences.  
             </p>
             <p>
                 U of S is located in Saskatoon, the most populated city in the province of Saskatchewan - the prairie of Canada. Saskatoon is on the Treaty 6 Territory of Canada and the Homeland of the M&#233;tis. It is common for residents living in this city to pay respect to the First Nations and M&#233;tis ancestors of this place.
