--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                     <button onclick="toggle_white()" class="navbar-toggler small-button" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                         Details
                     </button>
+                    <a href="#explore"><button style="margin-left: 15px;" class="navbar-toggler small-button" type="button">
+                        Explore Me    
+                    </button></a>     
 
                     </nav>
                     <div class="collapse" id="navbarToggleExternalContent">
@@ -202,7 +205,7 @@
                 I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the Earth's resources users, to contribute in solutions of shaping a low-carbon environment and address climate change challenges. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, counsellor, or motivator guiding more young people to discover their values and strengths, and I intend to create platforms that would utlitize their talents.
             </div>
 
-            <p>Explore what I have been doing to achieve my mission statement by clicking different subject areas below:</p>
+            <p id="explore">Explore what I have been doing to achieve my mission statement by clicking different subject areas below:</p>
                 
             <div class="container">
                 <div class="row">
