--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <b>Serve my community as:</b> 
                                 <ul class="nobull">
                                     <li><span style="font-size: 20px;"> &#128119; </span> Engineer 
-                                        <span style="font-size: 20px;"> &#128640; </span> Reseacher
+                                        <span style="font-size: 20px;"> &#128640; </span> Researcher
                                         <span style="font-size: 20px;"> &#128187; </span> Programmer</li> 
                                     <li><span style="font-size: 20px;"> &#128218; </span> Teacher
                                         <span style="font-size: 20px;"> &#128161; </span> Mentor
