--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <b>Serve my community as:</b> 
                         <ul class="nobull">
                             <li><span class="icon"> &#128119; </span> Engineer</li>
-                            <li><span class="icon"> &#128640; </span> Reseacher </li>
+                            <li><span class="icon"> &#128640; </span> Researcher </li>
                             <li><span class="icon"> &#128187; </span> Programmer</li> 
                             <li><span class="icon"> &#128218; </span> Teacher </li>
                             <li><span class="icon"> &#128161; </span> Mentor</li>
