--- a/travel/Italy.html
+++ b/travel/Italy.html
@@ -74,9 +74,9 @@
             </p>
 
             <p>
-                After this camp, I was invited to Carlo's family in Piove di Sacco to stay for a week where I learned a lot about the Italian culture. I visited Venice with his family members, and Don Giuliano has also invited me to visit his church and some local attractions nearby. What touched my heart the most was, Don Guiliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new year party in Padua for refugees. I was also invited to join the refugees and his team in this lovely new year celerbation. Having new year party with the Italian community and those refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
+                After this camp, I was invited to Carlo's family in Piove di Sacco to stay for a week where I learned a lot about the Italian culture. I visited Venice with his family members, and Don Giuliano has also invited me to visit his church and some local attractions nearby. What touched my heart the most was, Don Giuliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new year party in Padua for refugees. I was also invited to join the refugees and his team in this lovely new year celerbation. Having new year party with the Italian community and those refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
             <p>
-                After visiting Carlo and Don Guiliano, I also took opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin my new chapter of life. 
+                After visiting Carlo and Don Giuliano, I also took opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin my new chapter of life. 
             </p>
 
             <div class="container">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-md-4">
                         <img src="../travel/image/italy12.jpg" width=100%>
-                        <label>Celebrating new year in Padua with Don Paolo (left) and Don Guiliano (right)</label>
+                        <label>Celebrating new year in Padua with Don Paolo (left) and Don Giuliano (right)</label>
                     </div>
                 </div>
                 <div class="row">
